// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`thenEof '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`thenEof 'this' conditional success tests AST matches snapshot 1`] = `"this"`;

exports[`thenEof 'thisthat' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`thenEof 'foo' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
